--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="css/bootstrap.css" rel=stylesheet>
     <title>Checkout</title>
 
@@ -25,7 +25,7 @@
     <main class=container>
         <form id="checkout" class="col-md-12 row">
             <div class="col-md-4">
-                <header class="bg-light text-dark p-2"><img src="images/login.png" width="30" height="30" alt="">
+                <header class="bg-light text-dark p-2 border solid"><img src="images/login.png" width="30" height="30" alt="">
                     Dados pessoais
                 </header>
                 <div class="form-group">
@@ -50,23 +50,23 @@
                 </div>
                 <div class="form-group">
                     <label for="senha">Senha</label>
-                    <input class="form-control" type="text" id="senhaUsuario" name="senhaUsuario"
+                    <input class="form-control" type="password" id="senhaUsuario" name="senhaUsuario"
                         placeholder="Digite o seu senha">
                 </div>
                 <div class="form-group">
                     <label for="confirmaSenha">Confirme a sua senha</label>
-                    <input class="form-control" type="text" id="confSenhaUsuario" name="confSenhaUsuario"
+                    <input class="form-control" type="password" id="confSenhaUsuario" name="confSenhaUsuario"
                         placeholder="Confirme a sua senha">
                 </div>
                 </header>
             </div>
             <div class="col-md-4">
-                <header class="bg-light text-dark p-2"><img src="images/truck.png" width="30" height="30" alt="">Entrega
+                <header class="bg-light text-dark p-2 border solid"><img src="images/truck.png" width="30" height="30" alt="">Entrega
                 </header>
                 <div class="form-group">
                     <label for="cepUsuario">CEP</label>
                     <input class="form-control" type="text" id="cepUsuario" name="cepUsuario"
-                        placeholder="Digite o seu nome CEP">
+                        placeholder="Digite o seu numero do CEP">
                 </div>
                 <div class="form-group">
                     <label for="enderecoUsuario">Endereço</label>
@@ -147,10 +147,11 @@
             </div>
             </div>
             <div class="col-md-4">
-                <header class="bg-light text-dark p-2"><img src="images/cartao.png" width="30" height="30"
+                <header class="bg-light text-dark p-2 border solid"><img src="images/cartao.png" width="30" height="30"
                         alt="">Pagamento
                 </header>
                 <div class="p-3">
+                    <label>Resumo da Compra</label>
                     <div class="col-12">
                         <div class="card">
                             <div class="card-body"> <img src="images/gelo.jpg" width="65" height="65"> <br>
@@ -203,11 +204,40 @@
                     <input class="form-control" type="number" id="cpfTituCartao" name="cpfTituCartao"
                         placeholder="Digite o CPF do titular">
                 </div>
-                <div class="d-flex justify-content-end"> <button class="btn btn-primary">Finalize sua compra</button> </div>
-                </div>
+                <div class="d-flex justify-content-end"> <button class="btn btn-primary" type ="button" data-toggle="modal" data-target="#compraFinalizada" >Finalize sua compra</button> </div>
+            <div class="p-2"></div>    
+            </div>
             </div>
         </form>
     </main>
+    <div id="compraFinalizada" class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Compra realizada com sucesso!</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Uhuuuu, parabéns pela sua compra!</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-success"  data-toggle="modal" data-target="#compraFinalizada" type="button">Fechado!</button>
+            </div>
+          </div>
+        </div>
+      </div>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
